--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": ">=2.0,<2.2-dev"
+        "symfony/framework-bundle": ">=2.0,<2.2-dev",
+        "symfony/twig-bundle": ">=2.0,<2.2-dev"
     },
     "autoload": {
         "psr-0": {
