--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": ">=2.0,<2.3-dev",
-        "symfony/twig-bundle": ">=2.0,<2.3-dev"
+        "symfony/framework-bundle": ">=2.0,<2.1",
+        "symfony/twig-bundle": ">=2.0,<2."
     },
     "autoload": {
         "psr-0": {
