--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,18 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": ">=2.0,<2.1",
-        "symfony/twig-bundle": ">=2.0,<2."
+        "symfony/framework-bundle": ">=2.2,<2.4-dev",
+        "symfony/twig-bundle": ">=2.2,<2.4-dev"
     },
     "autoload": {
         "psr-0": {
             "Elao\\WebProfilerExtraBundle": "."
         }
     },
-    "target-dir": "Elao/WebProfilerExtraBundle"
+    "target-dir": "Elao/WebProfilerExtraBundle",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.2-dev"
+        }
+    }
 }
