--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "symfony/framework-bundle": "~2.1",
-        "symfony/twig-bundle": ">=2.0,<2.3-dev",
+        "symfony/twig-bundle": "~2.0",
         "twig/twig": "~1.12"
     },
     "autoload": {
