use psr-4 autoloader
since target-dir is deprecated

--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,10 @@
         "twig/twig": "~1.12"
     },
     "autoload": {
-        "psr-0": {
-            "Elao\\WebProfilerExtraBundle": "."
+        "psr-4": {
+            "Elao\\WebProfilerExtraBundle\\": "."
         }
     },
-    "target-dir": "Elao/WebProfilerExtraBundle",
     "extra": {
         "branch-alias": {
             "dev-master": "2.3-dev"
