--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~2.1",
+        "symfony/framework-bundle": "~2.1|~3.0",
         "symfony/twig-bundle": "~2.0|~3.0",
         "twig/twig": "~1.12"
     },
