--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "symfony/framework-bundle": "~2.1|~3.0",
         "symfony/twig-bundle": "~2.0|~3.0",
-        "twig/twig": "~1.12"
+        "twig/twig": "~1.12|~2.0"
     },
     "autoload": {
         "psr-4": {
