--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "~2.1|~3.0|~4.0",
-        "symfony/templating": "~2.0|~3.0|~4.0",
-        "symfony/twig-bundle": "~2.0|~3.0|~4.0",
-        "twig/twig": "~1.12|~2.0"
+        "symfony/framework-bundle": "~2.1|~3.0|~4.0|~5.0",
+        "symfony/templating": "~2.0|~3.0|~4.0|~5.0",
+        "symfony/twig-bundle": "~2.0|~3.0|~4.0|~5.0",
+        "twig/twig": "~1.12|~2.0|~3.0"
     },
     "autoload": {
         "psr-4": {
